# architecture-pro-warmhouse

./: .gitignore  README.md
apps/: docker-compose.yml
apps/smart_home/: init.sql
apps/smart_home/temperature_api/: .dockerignore  Dockerfile  pyproject.toml
apps/smart_home/temperature_api/temperature_api/: main.py
apps/smart_home_microservices/: Dockerfile  README.md  docker-compose.yml
apps/smart_home_microservices/generic_device_services/: README.md  abstract_sensor_service_asyncapi.yaml  abstract_sensor_service_openapi.json  pyproject.toml
apps/smart_home_microservices/generic_device_services/generic_device_services/: device_dto.py  router.py
apps/smart_home_microservices/generic_sensor_service/: README.md  pyproject.toml
apps/smart_home_microservices/generic_sensor_service/generic_sensor_service/: router.py  sensor_dto.py
apps/smart_home_microservices/old_system_sensor_service/: README.md  pyproject.toml
apps/smart_home_microservices/old_system_sensor_service/old_system_sensor_service/: dto.py  main.py  old_service_dto.py  old_system_sensor_router.py  router.py  settings.py  telemetry_queue_processor.py
apps/smart_home_microservices/old_system_sensor_service/old_system_sensor_service/debug_examples/: push_some_stuff.py  telemetry_queue_processor.py
apps/smart_home_microservices/telemetry_dto/: README.md  pyproject.toml
apps/smart_home_microservices/telemetry_dto/telemetry_dto/: __init__.py
apps/smart_home_microservices/telemetry_service/: .gitignore  README.md  pyproject.toml  telemetry_service_asyncapi.yaml  telemetry_service_openapi.json
apps/smart_home_microservices/telemetry_service/telemetry_service/: dummy_websocket_service.py  orm_classes.py  polling.py  router.py  telemetry_dto.py  telemetry_sqla_repo.py
apps/smart_home_microservices/telemetry_service/telemetry_service/misc/: async_api_view_router.py  create_topics.py  dummy_asyncapi.yaml  dummy_websocket_service.py
apps/smart_home_microservices/telemetry_service/templates/: asyncapi.html
apps/smart_home_microservices/telemetry_utils/telemetry_utils/: telemetry_queue_processor.py
diagrams/dump/: fancy_container.puml  multi_containers.puml
diagrams/task1_context/: context.puml
diagrams/task2/: class_example.puml  class_example_2.puml  class_sensor.puml  class_telemetry.puml  component_sensor_service.puml  component_telemetry.puml  component_telemetry_service.puml  component_update_service.puml  container.puml  sequence_sensor_2.puml  sequence_sensor_3.puml  sequence_sensor_4.puml
diagrams/task3_er/: er_rbac_model.puml  er_telemetry.puml
