
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temperature_api"
version = "0.0.0"
license = {text = "In the name of Rome!"}
authors = [
    {name = "S.P.Q.R", email = "felix-neko@list.ru"}
]

requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
]

[project.scripts]
temperature-api = "temperature_api.main:app"
temperature_api = "temperature_api.main:app"

[tool.hatch.build]
packages = ["temperature_api"]
