[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry_dto"
version = "0.0.0"
description = "Pydantic models for telemetry data and status events"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]


[tool.setuptools]
packages = ["telemetry_dto"]

[tool.setuptools.package-dir]
"" = "."

