[project]
name = "telemetry-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2",
    "uvicorn>=0.35.0",
]
